--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -44,10 +44,10 @@
 			</ul><!-- /.dl-submenu -->
 		</li>
 		<li>
-			<a href="#">Posts</a>
+			<a href="#">Projects</a>
 			<ul class="dl-submenu">
-				<li><a href="{{ site.url }}/archive/">All Posts</a></li>
-				<li><a href="{{ site.url }}/tags/">All Tags</a></li>
+				<li><a href="{{ site.url }}/archive/">Developments</a></li>
+				<li><a href="{{ site.url }}/tags/">Tags</a></li>
 			</ul>
 		</li>
 		{% for link in site.links %}<li>{% if link.external %}<a href="{{ link.url }}">{{ link.title }}</a>{% else %}<a href="{{ site.url }}{{ link.url }}">{{ link.title }}</a>{% endif %}</li>{% endfor %}
